--- a/views/idList.html
+++ b/views/idList.html
@@ -47,7 +47,7 @@
 				alert(httpRequest.responseText);
 			  } else {
 				alert('request에 뭔가 문제가 있어요.');
-				location.href="/user/new";
+				location.href="/user/createUser.html";
 			  }
 			}
 		}
