--- a/views/user/createUser.html
+++ b/views/user/createUser.html
@@ -56,7 +56,7 @@
 				alert(httpRequest.responseText);
 			  } else {
 				alert('request에 뭔가 문제가 있어요.');
-				location.href="/user/new";
+				//location.href="/user/createUser.html";
 			  }
 			}
 		}
